kubernetes/security/kyverno/policies/deny-privileged.yml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-privileged
spec:
  validationFailureAction: enforce
  rules:
    - name: privileged-forbidden
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Privileged containers are forbidden"
        pattern:
          spec:
            containers:
              - name: "*"
                securityContext:
                  privileged: false
