kubernetes/security/kyverno/policies/disallow-root.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root
spec:
  validationFailureAction: enforce
  rules:
    - name: root-forbidden
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Running as root is forbidden"
        pattern:
          spec:
            containers:
              - name: "*"
                securityContext:
                  runAsNonRoot: true
